@@ -1,3 +1,8 @@
+2003-11-18  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (::tkcon::InitSlave): remove tk_library from the
+	seeded auto_path.  Do not add OPT(library) to auto_path if it is "".
+
 2003-11-04  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (::tkcon::EvalSocketClosed): use tk_messageBox instead
